[package]
name = "igloo"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.1"
aws-sdk-s3 = "1.36.0"
env_logger = "0.11.3"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["full"] }
hyper-reverse-proxy = { git = "https://github.com/stefansundin/hyper-reverse-proxy.git", branch = "igloo", version = "0.5.2-dev" }
hyper-rustls = { version = "0.27.2", features = ["http2"] }
hyper-util = { version = "0.1.5", features = ["server"] }
log = "0.4.21"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
rustls = "0.23.10"
rustls-pemfile = "2.1.2"
tokio = { version = "1.38.0", features = ["macros", "signal", "rt-multi-thread"] }
tokio-rustls = "0.26.0"
x509-parser = "0.16.0"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }

[profile.release]
strip = true

[profile.release-build]
inherits = "release"
opt-level = "z"
strip = true
debug = false
lto = true
codegen-units = 1

[profile.debug-build]
inherits = "release"
opt-level = "z"
strip = false
debug = true
lto = true
codegen-units = 1
