[package]
name = "igloo"
version = "0.2.0"
edition = "2024"

[features]
tracing = []

[dependencies]
aws-config = "1.8.6"
aws-sdk-s3 = "1.104.0"
env_logger = "0.11.8"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-reverse-proxy = { git = "https://github.com/stefansundin/hyper-reverse-proxy.git", branch = "igloo", version = "0.5.2-dev" }
hyper-rustls = { version = "0.27.7", features = ["http2"] }
hyper-util = { version = "0.1.16", features = ["server"] }
log = "0.4.28"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
tokio = { version = "1.47.1", features = ["macros", "signal", "rt-multi-thread"] }
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
x509-parser = "0.18.0"
zip = { version = "5.0.0", default-features = false, features = ["deflate"] }

[profile.release]
strip = true

[profile.release-build]
inherits = "release"
opt-level = "z"
strip = true
debug = false
lto = true
codegen-units = 1

[profile.debug-build]
inherits = "release"
opt-level = "z"
strip = false
debug = true
lto = true
codegen-units = 1
