[package]
name = "igloo"
version = "0.2.0"
edition = "2024"

[features]
tracing = []

[dependencies]
aws-config = "1.8.12"
aws-sdk-s3 = "1.120.0"
env_logger = "0.11.8"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-reverse-proxy = { git = "https://github.com/stefansundin/hyper-reverse-proxy.git", branch = "igloo", version = "0.5.2-dev" }
hyper-rustls = { version = "0.27.7", features = ["http2"] }
hyper-util = { version = "0.1.19", features = ["server"] }
log = "0.4.29"
reqwest = "0.13.1"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
tokio = { version = "1.49.0", features = ["macros", "signal", "rt-multi-thread"] }
tokio-rustls = "0.26.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
x509-parser = "0.18.0"
zip = { version = "7.1.0", default-features = false, features = ["deflate"] }

[profile.release]
strip = true

[profile.release-build]
inherits = "release"
opt-level = "z"
strip = true
debug = false
lto = true
codegen-units = 1

[profile.debug-build]
inherits = "release"
opt-level = "z"
strip = false
debug = true
lto = true
codegen-units = 1
